# test_shift

./: Dockerfile  README.md  pyproject.toml
test_shift/: shift.db
test_shift/alembic/: env.py
test_shift/alembic/versions/: 5d95fe77dd2a_add_user.py
test_shift/app/: crud.py  main.py  models.py  schemas.py
test_shift/app/api/: routers.py
test_shift/app/api/endpoints/: user.py
test_shift/app/core/: base.py  config.py  db.py  init_db.py  user.py
